# stand-blog

./: .gitignore  README.md  pyproject.toml  requirements.txt
stand_blog_site/: manage.py
stand_blog_site/blog/: admin.py  forms.py  models.py  urls.py  views.py
stand_blog_site/blog/migrations/: 0001_initial.py  0002_alter_category_slug_alter_category_title_and_more.py  0003_contact.py  0004_alter_contact_options_alter_contact_email_and_more.py
stand_blog_site/blog/templates/blog/: about.html  categories_tpl.html  category.html  contact.html  index.html  news.html  popular_posts_tpl.html  search.html  sidebar.html  single_post.html  tags_tpl.html
stand_blog_site/blog/templatetags/: menu_categories.py  menu_tags.py  popular_posts.py
stand_blog_site/stand_blog_site/: asgi.py  settings.py  urls.py  wsgi.py
stand_blog_site/stand_blog_site/static/assets/css/: templatemo-stand-blog.css
stand_blog_site/stand_blog_site/static/assets/js/: active.js
stand_blog_site/static/assets/css/: templatemo-stand-blog.css
stand_blog_site/templates/: base.html
stand_blog_site/templates/inc/: _header.html
