[tool.poetry]
name = "stand-blog"
version = "0.1.0"
description = ""
authors = ["Angelina_RLY <cher.rly2036@gmail.com>"]
readme = "README.md"
packages = [{include = "stand_blog"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.4"
psycopg2-binary = "^2.9.7"
psycopg2 = "^2.9.7"
pillow = "^10.0.0"


[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.0"
django-debug-toolbar = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
